# vivcad-ciccomp

./: .gitignore  .gitmodules  Makefile  README.rst  analyze.py  build.py  flake.nix  pyproject.toml
include/firpm/: util.h
src/: cheby.cpp
