[tool.poetry]
name = "vivcad-ciccomp"
version = "0.1.0"
description = "Refactor and Python bindings for G. Smecher's modified Parks-McClellan FIR generator for CIC compensation"
authors = ["Lilly Rizvi <rizvi.l@northeastern.edu>"]
license = "GPL-3.0-only"
readme = "README.rst"
packages = [{include = "ciccomp"}]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.8.2"
numpy = "^1.26.3"
pybind11 = "^2.11.1"

[tool.poetry.build]
script = "build.py"
generate-setup-file = true

[build-system]
requires = [
    "poetry-core",
    "setuptools",
    "wheel",
    "pybind11 >= 2.11.1"
]
build-backend = "poetry.core.masonry.api"
